<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bt"
    android:orientation="vertical"
    tools:context=".Register">

    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginTop="200dp"
        android:visibility="gone"/>
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <TextView
        android:id="@+id/tvLoad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/loading_please_wait"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end|center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/user_registration"
            android:textColor="#1E88E5"
            android:textSize="30sp"

            android:textStyle="bold"
            app:fontFamily="sans-serif-black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etFName"
            android:layout_width="299dp"
            android:layout_height="52dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/my_boarder"
            android:ems="10"
            android:hint="@string/enter_the_first_name"
            android:inputType="textPersonName"
            android:shadowColor="#DDD3D3"
            android:textColor="#070707"
            android:textColorHighlight="#0C0C0C"
            android:textColorHint="?android:attr/textColorHint"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAbout"
            android:layout_marginLeft="20dp" />

        <EditText
            android:id="@+id/etSName"
            android:layout_width="299dp"
            android:layout_height="49dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/enter_the_second_name"
            android:background="@drawable/my_boarder"
            android:inputType="textPersonName"
            android:textColor="#070707"
            android:textColorHint="?android:attr/textColorHint"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.33"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etFName"
            android:layout_marginLeft="20dp" />

        <EditText
            android:id="@+id/etUsername"
            android:layout_width="297dp"
            android:layout_height="47dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/enter_your_username"
            android:background="@drawable/my_boarder"
            android:inputType="textPersonName"
            android:textColor="#070707"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.342"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSName"
            android:layout_marginLeft="20dp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="296dp"
            android:layout_height="43dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/type_in_your_password"
            android:background="@drawable/my_boarder"
            android:inputType="textPassword"
            android:textColor="#070707"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.339"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail"
            android:layout_marginLeft="20dp" />

        <EditText
            android:id="@+id/etPassword2"
            android:layout_width="295dp"
            android:layout_height="41dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:hint="@string/confirm_your_password"
            android:background="@drawable/my_boarder"
            android:inputType="textPassword"
            android:textColor="#070707"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.353"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword"
            android:layout_marginLeft="20dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="295dp"
            android:layout_height="41dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:ems="10"
            android:hint="@string/enter_your_email"
            android:background="@drawable/my_boarder"
            android:inputType="textEmailAddress"
            android:textColor="#070707"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.344"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUsername"
            android:layout_marginLeft="20dp" />

        <Button
            android:id="@+id/btRegister"
            android:layout_width="109dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="32dp"
            android:background="@color/colorBlue"
            android:text="register"
            android:textSize="20sp"
            android:textColor="#FFFEFE"
            android:textStyle="bold"
            android:fontFamily="sans-serif-black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.127"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword2"
            android:layout_marginLeft="10dp" />

        <TextView
            android:id="@+id/tvLogIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/already_have_an_account_login"
            android:textSize="20sp"
            android:textStyle="italic"
            android:textColor="@color/colorBlue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.194"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btRegister"
            app:layout_constraintVertical_bias="0.11"
            android:layout_marginLeft="10dp" />


    </LinearLayout>

</LinearLayout>